--- a/static/css/style.css
+++ b/static/css/style.css
@@ -434,3 +434,11 @@ body {
     position:absolute;
     bottom: 0;
 }
+
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    background-color: #FFF;
+}
